--- a/src/app/views/game/game.component.html
+++ b/src/app/views/game/game.component.html
@@ -1,1 +1,33 @@
-<p>game works!</p>
+<div class="container">
+  <div class="row flex-column">
+    <div class="player p1 col-12">
+      <span class="name">Computer</span>
+      <section>
+        <label class="box">
+          <span>Rock</span>
+        </label>
+        <label class="box">
+          <span>Paper</span>
+        </label>
+        <label class="box">
+          <span>Scissors</span>
+        </label>
+      </section>
+    </div>
+    <hr>
+    <div class="player p2 col-12">
+      <section>
+        <label class="box">
+          <span>Rock</span>
+        </label>
+        <label class="box">
+          <span>Paper</span>
+        </label>
+        <label class="box">
+          <span>Scissors</span>
+        </label>
+      </section>
+      <span class="name">Me</span>
+    </div>
+  </div>
+</div>
