configer the selection part of the game
enable the game to make selection and highlight the selected option for computer and user

--- a/src/app/views/game/game.component.html
+++ b/src/app/views/game/game.component.html
@@ -3,13 +3,16 @@
     <div class="player p1 col-12">
       <span class="name">Computer</span>
       <section>
-        <label class="box">
+        <label for="comp_rock" class="box">
+          <input type="radio" name="comp_select" value="rock" id="comp_rock" hidden="hidden">
           <span>Rock</span>
         </label>
-        <label class="box">
+        <label for="comp_paper" class="box">
+          <input type="radio" name="comp_select" value="paper" id="comp_paper" hidden="hidden">
           <span>Paper</span>
         </label>
-        <label class="box">
+        <label for="comp_scissors" class="box">
+          <input type="radio" name="comp_select" value="scissors" id="comp_scissors" hidden="hidden">
           <span>Scissors</span>
         </label>
       </section>
@@ -17,13 +20,16 @@
     <hr>
     <div class="player p2 col-12">
       <section>
-        <label class="box">
+        <label for="me_rock" class="box">
+          <input type="radio" name="me_select" value="rock" id="me_rock" hidden="hidden">
           <span>Rock</span>
         </label>
-        <label class="box">
+        <label for="me_paper" class="box">
+          <input type="radio" name="me_select" value="paper" id="me_paper" hidden="hidden">
           <span>Paper</span>
         </label>
-        <label class="box">
+        <label for="me_scissors" class="box">
+          <input type="radio" name="me_select" value="scissors" id="me_scissors" hidden="hidden">
           <span>Scissors</span>
         </label>
       </section>
