--- a/src/app/views/game/game.component.html
+++ b/src/app/views/game/game.component.html
@@ -1,39 +1,43 @@
 <div class="container">
   <div class="row flex-column">
-    <div class="player p1 col-12">
-      <span class="name">Computer</span>
-      <section>
-        <label for="comp_rock" class="box">
-          <input type="radio" name="comp_select" value="rock" id="comp_rock" hidden="hidden">
-          <span>Rock</span>
-        </label>
-        <label for="comp_paper" class="box">
-          <input type="radio" name="comp_select" value="paper" id="comp_paper" hidden="hidden">
-          <span>Paper</span>
-        </label>
-        <label for="comp_scissors" class="box">
-          <input type="radio" name="comp_select" value="scissors" id="comp_scissors" hidden="hidden">
-          <span>Scissors</span>
-        </label>
-      </section>
-    </div>
+    <form #compForm="ngForm">
+      <div class="player p1 col-12">
+        <span class="name">Computer</span>
+        <section>
+          <label for="comp_rock" class="box">
+            <input type="radio" #comp_select="ngModel" ngModel name="comp_select" value="rock" id="comp_rock" hidden="hidden">
+            <span>Rock</span>
+          </label>
+          <label for="comp_paper" class="box">
+            <input type="radio" #comp_select="ngModel" ngModel name="comp_select" value="paper" id="comp_paper" hidden="hidden">
+            <span>Paper</span>
+          </label>
+          <label for="comp_scissors" class="box">
+            <input type="radio" #comp_select="ngModel" ngModel name="comp_select" value="scissors" id="comp_scissors" hidden="hidden">
+            <span>Scissors</span>
+          </label>
+        </section>
+      </div>
+    </form>
     <hr>
-    <div class="player p2 col-12">
-      <section>
-        <label for="me_rock" class="box">
-          <input type="radio" name="me_select" value="rock" id="me_rock" hidden="hidden">
-          <span>Rock</span>
-        </label>
-        <label for="me_paper" class="box">
-          <input type="radio" name="me_select" value="paper" id="me_paper" hidden="hidden">
-          <span>Paper</span>
-        </label>
-        <label for="me_scissors" class="box">
-          <input type="radio" name="me_select" value="scissors" id="me_scissors" hidden="hidden">
-          <span>Scissors</span>
-        </label>
-      </section>
-      <span class="name">Me</span>
-    </div>
+    <form #meForm="ngForm">
+      <div class="player p2 col-12">
+        <section>
+          <label for="me_rock" class="box">
+            <input type="radio" #me_select="ngModel" ngModel (change)="mySelection($event.target.value, compForm, meForm)" name="me_select" value="rock" id="me_rock" hidden="hidden">
+            <span>Rock</span>
+          </label>
+          <label for="me_paper" class="box">
+            <input type="radio" #me_select="ngModel" ngModel (change)="mySelection($event.target.value, compForm, meForm)" name="me_select" value="paper" id="me_paper" hidden="hidden">
+            <span>Paper</span>
+          </label>
+          <label for="me_scissors" class="box">
+            <input type="radio" #me_select="ngModel" ngModel (change)="mySelection($event.target.value, compForm, meForm)" name="me_select" value="scissors" id="me_scissors" hidden="hidden">
+            <span>Scissors</span>
+          </label>
+        </section>
+        <span class="name">Me</span>
+      </div>
+    </form>
   </div>
 </div>
