show results done
first part of the application is done
- design done
- initial logic done
- show results done

phase two to begin

--- a/src/app/modals/pop-ups/pop-ups.component.html
+++ b/src/app/modals/pop-ups/pop-ups.component.html
@@ -1,1 +1,13 @@
-<p>pop-ups works!</p>
+<div class="alertMsg">
+  <div class="massage_body">
+    <img [src]="src" alt="">
+  </div>
+  <div class="message_actions">
+    <button (click)='close()' class="col-6">
+      Retry
+    </button>
+    <button (click)='close()' class="col-6">
+      Exit
+    </button>
+  </div>
+</div>
