--- a/src/app/views/helpers/header/header.component.html
+++ b/src/app/views/helpers/header/header.component.html
@@ -5,7 +5,7 @@
       <img src="/assets/logo.svg" alt="logo icon" [routerLink]="['/']" >
       <div class="person-info">
         <div class="name">Otlotleng Nkwadi</div>
-        <div class="rank"><small>Rank:</small> 5</div>
+        <div class="rank"><!--<small>Rank:</small> 5 --></div>
       </div>
     </div>
     <nav>
