--- a/src/app/views/game/game.component.scss
+++ b/src/app/views/game/game.component.scss
@@ -1,9 +1,8 @@
 @import "~sass-text-stroke/_text-stroke";
 
 .container {
-  margin-top: calc(1rem + 40px);
-  margin-bottom: calc(2rem + 14px);
-  height: calc(100vh - 3rem - 54px);
+  padding-top: calc(1rem + 40px);
+  height: calc(100vh - 0rem - 54px);
 
   .row {
     justify-content: space-between;
@@ -80,3 +79,46 @@ hr {
   margin: 1px auto;
   width: 80%;
 }
+
+.alertMsg {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: #00000080;
+  z-index: 22;
+}
+
+.message-wrapper {
+  max-width: 350px;
+  width: 240px;
+  margin: auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  background: #A6A6A6;
+  border-radius: 5px;
+
+  img {
+    width: 100%;
+  }
+
+  .message_actions {
+    margin-top: 8px;
+    background-color: #C4C4C4;
+    border-radius: 0px 0px 5px 5px;
+
+    button.btn {
+      border-radius: 0px 0px 5px 5px !important;
+
+      &:hover, &:active {
+        background-color: #e4959569;
+      }
+    }
+  }
+}
+
+
