--- a/src/app/views/helpers/footer/footer.component.html
+++ b/src/app/views/helpers/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="bg-dark p-3 align-items-center">
   <div class="wrapper container-sm" >
-    <div class="score">W : <span>10</span></div>
+    <!-- <div class="score">W : <span>10</span></div>
     <div class="score">D : <span>5</span></div>
-    <div class="score">L : <span>30</span></div>
+    <div class="score">L : <span>30</span></div> -->
   </div>
 </footer>
