--- a/src/app/views/helpers/header/header.component.scss
+++ b/src/app/views/helpers/header/header.component.scss
@@ -6,7 +6,7 @@ header {
   .wrapper {
     display: grid;
     grid-template-columns: 1fr 30px;
-    padding-right: 0; 
+    padding-right: 0;
     padding-left: 0;
   }
 
@@ -37,6 +37,7 @@ header {
 
       .rank {
         font-size: 0.6rem;
+        min-height: 10px;
 
         small {
           font-size: 0.45rem;
