--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,3 +16,6 @@ $dark: #141414;
 * {
   font-family: 'Ravi Prakash', sans-serif;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
