create a full screen for mobile view
scroll game into full view when in mobile view

--- a/src/app/views/helpers/header/header.component.scss
+++ b/src/app/views/helpers/header/header.component.scss
@@ -12,6 +12,13 @@ header {
 
   nav {
     margin: auto;
+
+    svg {
+      fill: white;
+      position: relative;
+      left: 0;
+      width: 20px;
+    }
   }
 
   .logo {
