--- a/src/app/views/helpers/header/header.component.html
+++ b/src/app/views/helpers/header/header.component.html
@@ -1,15 +1,63 @@
 <header class="bg-dark p-2 px-3 align-items-center">
   <!-- d-flex flex-row justify-content-between -->
-  <div class="wrapper container-sm" >
+  <div class="wrapper container-sm">
     <div class="logo">
-      <img src="/assets/logo.svg" alt="logo icon" [routerLink]="['/']" >
+      <img src="/assets/logo.svg" alt="logo icon" [routerLink]="['/']">
       <div class="person-info">
-        <div class="name">Otlotleng Nkwadi</div>
-        <div class="rank"><!--<small>Rank:</small> 5 --></div>
+        <!-- <div class="name">Otlotleng Nkwadi</div> -->
+        <div class="rank">
+          <!--<small>Rank:</small> 5 -->
+        </div>
       </div>
     </div>
     <nav>
-      <img src="/assets/menu.svg" alt="menu icon">
+      <!-- <img src="/assets/menu.svg" alt="menu icon"> -->
+      <div (click)="fullScreen()">
+        <svg (click)="fullScreen()" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+          x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+          <g>
+            <path d="M192,64H32C14.328,64,0,78.328,0,96v96c0,17.672,14.328,32,32,32s32-14.328,32-32v-64h128c17.672,0,32-14.328,32-32
+		S209.672,64,192,64z" />
+            <path d="M480,64H320c-17.672,0-32,14.328-32,32s14.328,32,32,32h128v64c0,17.672,14.328,32,32,32s32-14.328,32-32V96
+		C512,78.328,497.672,64,480,64z" />
+            <path d="M480,288c-17.672,0-32,14.328-32,32v64H320c-17.672,0-32,14.328-32,32s14.328,32,32,32h160c17.672,0,32-14.328,32-32v-96
+		C512,302.328,497.672,288,480,288z" />
+            <path d="M192,384H64v-64c0-17.672-14.328-32-32-32S0,302.328,0,320v96c0,17.672,14.328,32,32,32h160c17.672,0,32-14.328,32-32
+		S209.672,384,192,384z" />
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+          <g>
+          </g>
+        </svg>
+
+      </div>
     </nav>
   </div>
 </header>
