--- a/src/app/views/helpers/header/header.component.html
+++ b/src/app/views/helpers/header/header.component.html
@@ -12,18 +12,24 @@
     </div>
     <nav>
       <!-- <img src="/assets/menu.svg" alt="menu icon"> -->
-      <div (click)="fullScreen()">
-        <svg (click)="fullScreen()" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-          x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+      <div>
+        <div (click)="fullScreen()" [hidden]="isFull == 'grow'">
+          <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 32 32"
+          style="enable-background:new 0 0 32 32;" xml:space="preserve">
           <g>
-            <path d="M192,64H32C14.328,64,0,78.328,0,96v96c0,17.672,14.328,32,32,32s32-14.328,32-32v-64h128c17.672,0,32-14.328,32-32
-		S209.672,64,192,64z" />
-            <path d="M480,64H320c-17.672,0-32,14.328-32,32s14.328,32,32,32h128v64c0,17.672,14.328,32,32,32s32-14.328,32-32V96
-		C512,78.328,497.672,64,480,64z" />
-            <path d="M480,288c-17.672,0-32,14.328-32,32v64H320c-17.672,0-32,14.328-32,32s14.328,32,32,32h160c17.672,0,32-14.328,32-32v-96
-		C512,302.328,497.672,288,480,288z" />
-            <path d="M192,384H64v-64c0-17.672-14.328-32-32-32S0,302.328,0,320v96c0,17.672,14.328,32,32,32h160c17.672,0,32-14.328,32-32
-		S209.672,384,192,384z" />
+            <g id="fullscreen_x5F_exit">
+              <g>
+                <polygon style="fill:#030104;"
+                  points="24.586,27.414 29.172,32 32,29.172 27.414,24.586 32,20 20,20 20,32 			" />
+                <polygon style="fill:#030104;"
+                  points="0,12 12,12 12,0 7.414,4.586 2.875,0.043 0.047,2.871 4.586,7.414 			" />
+                <polygon style="fill:#030104;"
+                  points="0,29.172 2.828,32 7.414,27.414 12,32 12,20 0,20 4.586,24.586 			" />
+                <polygon style="fill:#030104;"
+                  points="20,12 32,12 27.414,7.414 31.961,2.871 29.133,0.043 24.586,4.586 20,0 			" />
+              </g>
+            </g>
           </g>
           <g>
           </g>
@@ -55,8 +61,57 @@
           </g>
           <g>
           </g>
-        </svg>
-
+          </svg>
+        </div>
+        <div  (click)="fullScreen()" [hidden]="isFull == 'shrink'">
+          <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+            x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
+            <g>
+              <g id="fullscreen">
+                <g>
+                  <polygon style="fill:#030104;"
+                    points="27.414,24.586 22.828,20 20,22.828 24.586,27.414 20,32 32,32 32,20 			" />
+                  <polygon style="fill:#030104;"
+                    points="12,0 0,0 0,12 4.586,7.414 9.129,11.953 11.957,9.125 7.414,4.586 			" />
+                  <polygon style="fill:#030104;"
+                    points="12,22.828 9.172,20 4.586,24.586 0,20 0,32 12,32 7.414,27.414 			" />
+                  <polygon style="fill:#030104;"
+                    points="32,0 20,0 24.586,4.586 20.043,9.125 22.871,11.953 27.414,7.414 32,12 			" />
+                </g>
+              </g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+            <g>
+            </g>
+          </svg>
+        </div>
       </div>
     </nav>
   </div>
