full scrren push to prod
change version, added creator, fixed fullscreen and deploye to prod

--- a/src/app/views/helpers/footer/footer.component.html
+++ b/src/app/views/helpers/footer/footer.component.html
@@ -3,5 +3,6 @@
     <!-- <div class="score">W : <span>10</span></div>
     <div class="score">D : <span>5</span></div>
     <div class="score">L : <span>30</span></div> -->
+    <div>Created by: <a href="mailto:nkwadioo@gmail.com"> Nkwadi OO</a></div>
   </div>
 </footer>
