--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 $dark: #141414;
+$bg-color: #424242;
+$hl-color: #2196F3;
+$muted-color: mix(white, $bg-color, 70%);
+$trans-time: 300ms;
+
 
 @import "node_modules/bootstrap/scss/bootstrap.scss";
 
@@ -13,9 +18,91 @@ $dark: #141414;
   src: url('/assets/fonts/RaviPrakash-Regular.ttf');
 }
 
-* {
+body, :not(input) {
   font-family: 'Ravi Prakash', sans-serif;
 }
 
 html, body { height: 100%; }
 // body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+button.myBtn {
+  margin: 0 auto;
+  padding: 2px 25px;
+  padding-top: 7px;
+  display: flex;
+  color: black;
+  background: #F2C94C;
+}
+
+// input style
+.group {
+  position: relative;
+  margin: 45px 0;
+  font-family: "Sansation", sans-serif !important;
+
+
+
+  // INPUTS // ============================== //
+  textarea {
+    resize: none;
+  }
+
+  input,
+  textarea {
+    background: none;
+    color: $muted-color;
+    font-size: 18px;
+    padding: 10px 10px 10px 5px;
+    display: block;
+    width: 100%;
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid $muted-color;
+
+    &:focus {
+      outline: none;
+    }
+    &:focus ~ label,
+    &:valid ~ label {
+      top: -14px;
+      font-size: 12px;
+      color: $hl-color;
+    }
+    &:focus ~ .bar:before {
+      width: 100%;
+    }
+  }
+
+  input[type="password"] {
+    letter-spacing: 0.3em;
+  }
+
+  label {
+    color: $muted-color;
+    font-size: 16px;
+    font-weight: normal;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 10px;
+    transition: $trans-time ease all;
+    font-family: "Sansation", sans-serif !important;
+  }
+
+  .bar {
+    position: relative;
+    display: block;
+    width: 100%;
+    &:before {
+      content: '';
+      height: 2px;
+      width: 0;
+      bottom: 0px;
+      position: absolute;
+      background: $hl-color;
+      transition: $trans-time ease all;
+      left: 0%;
+    }
+  }
+
+}
