--- a/src/app/views/forms/forms.component.html
+++ b/src/app/views/forms/forms.component.html
@@ -28,6 +28,7 @@
   <footer class="bg-dark p-3 align-items-center">
     <div class="wrapper container-sm" >
       <div>Created by: <a href="mailto:nkwadioo@gmail.com"> Nkwadi OO</a></div>
+      <div>Live: {{liveCount}}</div>
     </div>
   </footer>
 </div>
