--- a/src/app/views/forms/forms.component.scss
+++ b/src/app/views/forms/forms.component.scss
@@ -21,6 +21,13 @@
         font-weight: 100;
         letter-spacing: 0.04rem;
       }
+
+      span {
+        font-size: 51px;
+        margin-bottom: -45px;
+        position: relative;
+        top: -19px;
+      }
     }
 
     .dim {
