--- a/src/app/views/forms/login/login.component.html
+++ b/src/app/views/forms/login/login.component.html
@@ -1,10 +1,12 @@
-<div class="group">
-  <input type="text" required="required"/><span class="highlight"></span><span class="bar"></span>
-  <label>User name</label>
-</div>
-<div class="group">
-  <input type="password" required="required"/><span class="highlight"></span><span class="bar"></span>
-  <label>Password</label>
-</div>
+<form action="">
+  <div class="group">
+    <input type="text" required="required"/><span class="highlight"></span><span class="bar"></span>
+    <label>User name</label>
+  </div>
+  <div class="group">
+    <input type="password" required="required"/><span class="highlight"></span><span class="bar"></span>
+    <label>Password</label>
+  </div>
 
-<button class="myBtn login" (click)="signin()">Sign In</button>
+  <button class="myBtn login" (click)="signin()">Sign In</button>
+</form>
